Cards alignment fix

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -41,6 +41,14 @@
   padding: 32px;
 }
 
+.section .default-content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
+}
+
 .cards-container {
   box-shadow: 10px 10px 10px 10px grey;
   padding: 32px;
